--- a/.env
+++ b/.env
@@ -1,11 +1,7 @@
 APP_ENV=prod
 APP_DEBUG=false
 APP_TIMEZONE="Europe/Paris"
-DATABASE_URL="mysql://root:toor@localhost:3306/svelte_php?charset=utf8mb4"
-MAILER_DSN=""
-MAILER_FROM=""
-REDIS_SERVER="redis://127.0.0.1"
-REDIS_ENABLED=false
 LOG_ROTATE=3
 LOG_DAYS=false
 LOG_BACKTRACE=true
+VOICE_REPOSITORY="%project_root%/data/voices"
