--- a/package.json
+++ b/package.json
@@ -1,11 +1,40 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "serve": "php8.2 -S 127.0.0.1:8500 -t public serve.php",
-    "phan": "php8.2 -dextension=ast vendor/bin/phan -C  --unused-variable-detection  --redundant-condition-detection",
-    "cs:fix": "php8.2 vendor/bin/php-cs-fixer fix"
-  },
-  "devDependencies": {},
-  "dependencies": {}
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "run-p serve vite:dev",
+        "serve": "php8.2 -S 127.0.0.1:8500 -t public serve.php",
+        "phan": "php8.2 -dextension=ast vendor/bin/phan -C  --unused-variable-detection  --redundant-condition-detection",
+        "cs:fix": "php8.2 vendor/bin/php-cs-fixer fix",
+        "vite:dev": "vite --host 127.0.0.1",
+        "vite:build": "vite build",
+        "vite:preview": "vite preview"
+    },
+    "devDependencies": {
+        "vite-plugin-symfony": "^8",
+        "@tailwindcss/forms": "^0.5",
+        "@tailwindcss/typography": "^0.5",
+        "@tailwindcss/vite": "^4",
+        "@types/node": "^22.13.10",
+        "@typescript-eslint/eslint-plugin": "^8.9.0",
+        "@typescript-eslint/parser": "^8.9.0",
+        "eslint": "^9.12.0",
+        "eslint-plugin-prettier": "^5.2.3",
+        "prettier": "3.5.2",
+        "prettier-plugin-organize-imports": "3.2.4",
+        "prettier-plugin-tailwindcss": "0.6.1",
+        "sass": "^1.85.0",
+        "tailwindcss": "^4",
+        "tslib": "^2",
+        "typescript": "^5",
+        "unplugin-fonts": "^1.3",
+        "@tsconfig/svelte": "^5",
+        "npm-run-all": "^4",
+        "vite": "^6"
+    },
+    "dependencies": {
+        "@fontsource/poppins": "^5",
+        "match-operator": "^0.3.1",
+        "mini.css": "^3.0.1"
+    }
 }
