:sparkles: prevent removing audio file using env

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ LOG_DAYS=false
 LOG_BACKTRACE=true
 VOICE_REPOSITORY="%project_root%/data/voices"
 APP_TITLE="Piper voice api"
-EDGE_CLIENT_TOKEN="6A5AA1D4EAFF4E9FB37E23D68491D6F4"
 FORCE_HTTPS=false
 PIPER_ENABLED=true
+REMOVE_AUDIO_FILES=true
