--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "vite:preview": "vite preview"
     },
     "devDependencies": {
-        "vite-plugin-symfony": "^8",
         "@tailwindcss/forms": "^0.5",
         "@tailwindcss/typography": "^0.5",
         "@tailwindcss/vite": "^4",
@@ -20,6 +19,7 @@
         "@typescript-eslint/parser": "^8.9.0",
         "eslint": "^9.12.0",
         "eslint-plugin-prettier": "^5.2.3",
+        "npm-run-all": "^4",
         "prettier": "3.5.2",
         "prettier-plugin-organize-imports": "3.2.4",
         "prettier-plugin-tailwindcss": "0.6.1",
@@ -28,8 +28,8 @@
         "tslib": "^2",
         "typescript": "^5",
         "unplugin-fonts": "^1.3",
-        "npm-run-all": "^4",
-        "vite": "^6"
+        "vite": "^6",
+        "vite-plugin-symfony": "^8"
     },
     "dependencies": {
         "@fontsource/poppins": "^5",
